--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ crashlytics-build.properties
 
 # But keep the demo packages themselves.
 !/Assets/Plugins/Sirenix/Demos/*.unitypackage 
+Assets/Package/ConsolePro/
+Assets/Package/ConsolePro.meta
