--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.2d.psdimporter": "4.1.0",
     "com.unity.2d.spriteshape": "5.1.4",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ads": "3.7.5",
     "com.unity.collab-proxy": "1.9.0",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.inputsystem": "1.1.1",
